<resources>
    <string name="app_name">BiometryForForestry</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="topic_one_subject">Робота 1. Точкове та інтервальне оцінювання параметрів розподілу при «малій» кількості спостережень</string>
    <string name="topic_one_tab_1">1. Обчислення статистик розподілу при малій кількості спостережень</string>
    <string name="topic_one_form_1">Середнє арифметичне значення (пересічне)</string>
    <string name="topic_one_form_2">Середнє квадратичне відхилення (сигма)</string>
    <string name="topic_one_form_3">Коефіцієнт мінливості</string>
    <string name="topic_one_form_4">Довірчі інтервали при ймовірності р=0,95 (рівні значущості а=1-р=0,05 ):</string>
    <string name="topic_one_form_5">- для середнього арифметичного значення</string>
    <string name="topic_one_form_6">- для середнього квадратичного відхилення</string>


    <string name="app_name2">Firebase Authentication</string>
    <string name="label_google_sign_in">Firebase + Google Sign In</string>
    <string name="desc_google_sign_in">Use a Google Sign In credential to authenticate with Firebase.</string>
    <string name="label_facebook_login">Firebase + Facebook Login</string>
    <string name="desc_facebook_login">Use a Facebook Login credential to authenticate with Firebase.</string>
    <string name="label_twitter_login">Firebase + Twitter Login</string>
    <string name="desc_twitter_login">Use a Twitter Login credential to authenticate with Firebase.</string>
    <string name="label_emailpassword">Email/Password Authentication</string>
    <string name="desc_emailpassword">Use an email and password to authenticate with Firebase.</string>
    <string name="label_passwordless">Passwordless Authentication</string>
    <string name="desc_passwordless">Use only an email to authenticate with Firebase.</string>
    <string name="label_phone_auth">Phone Number Authentication</string>
    <string name="desc_phone_auth">Use a phone number to authenticate with Firebase.</string>
    <string name="label_anonymous_auth">Anonymous Authentication</string>
    <string name="desc_anonymous_auth">Sign in anonymously and then later upgrade to a full Firebase Auth user.</string>
    <string name="label_custom_auth">Custom Authentication</string>
    <string name="desc_custom_auth">Use a custom token signed by your own server to authenticate with Firebase.</string>
    <string name="label_firebase_ui">FirebaseUI Auth</string>
    <string name="desc_firebase_ui">Use the FirebaseUI-Android library to authenticate with Firebase.</string>
    <string name="hint_user_id">User ID</string>
    <string name="get_custom_token">Get Token</string>
    <string name="sign_in">Sign In</string>
    <string name="create_account">Create Account</string>
    <string name="send_link">Send Link</string>
    <string name="sign_out">Sign Out</string>
    <string name="verify_email">Verify Email</string>
    <string name="disconnect">Disconnect</string>
    <string name="loading">Loading…</string>
    <string name="custom_token">Custom Token</string>
    <string name="signed_in">Signed In</string>
    <string name="signed_out">Signed Out</string>
    <string name="token_null">Token: null</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="desc_firebase_lockup">Firebase logo and name</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="start_phone_auth">Start</string>
    <string name="verify_phone_auth">Verify</string>
    <string name="resend_phone_auth">Resend</string>
    <string name="hint_phone_number">Phone Number</string>
    <string name="hint_verification_code">Verification Code</string>
    <string name="status_code_sent">Code Sent</string>
    <string name="status_verification_failed">Verification failed</string>
    <string name="status_verification_succeeded">Verification succeeded</string>
    <string name="status_sign_in_failed">Sign-in failed</string>
    <string name="instant_validation">(instant validation)</string>
    <string name="firebase_status_fmt">Firebase User: %s</string>
    <string name="firebase_user_management">Firebase User Management</string>
    <string name="google_status_fmt">Google User: %s</string>
    <string name="google_title_text">Google Sign In</string>
    <string name="facebook_status_fmt">Facebook User: %s</string>
    <string name="facebook_title_text">Facebook Login</string>
    <string name="emailpassword_status_fmt">Email User: %1$s (verified: %2$b)</string>
    <string name="emailpassword_title_text">Email and Password</string>
    <string name="passwordless_status_fmt">Email User: %1$s (verified: %2$b)</string>
    <string name="passwordless_title_text">Passwordless Sign In</string>
    <string name="status_email_not_sent">Send link to your email to get started.</string>
    <string name="status_email_sent">Link sent, check your email to continue.</string>
    <string name="status_link_found">Link received, enter email to sign in.</string>
    <string name="phone_title_text">Phone Number</string>
    <string name="twitter_status_fmt">Twitter User: %s</string>
    <string name="twitter_title_text">Twitter Login</string>
    <string name="firebaseui_status_fmt">Firebase User: %s</string>
    <string name="firebaseui_title_text">FirebaseUI Auth</string>
    <string name="id_fmt">User ID: %s</string>
    <string name="email_fmt">Email: %s</string>
    <string name="topic_2_1_subject">Робота 2. Зведення результатів «великої» кількості спостережень</string>
    <string name="text2">Теоретична кількість розрядів</string>
    <string name="topic_2_1_text2">Величина розряду:</string>
    <string name="topic_2_1_text3">- для діаметру</string>
    <string name="topic_2_1_text4">- для висоти</string>
    <string name="topic_2_1_text5">Середнє значення першого розряду</string>
    <string name="nugna_granutsa">Нижня границя першогого розряду</string>
    <string name="verhna_granutsa">Верхня границя першогого розряду</string>
    <string name="title_of_table21">2.1. Ряд розподілу діаметра</string>
    <string name="granutsi_rozradiv">Границі розрядів, см</string>
    <string name="ser_znach_rozradiv">Середні значення розрядів, см (     )</string>
    <string name="zvedennya">Зведення</string>
    <string name="chastotu">Частоти            (      )</string>
    <string name="nakopuch_chastot">Накопичені частоти (∑      )</string>
    <string name="topic_3_subject">Робота 3. Обчислення статистик ряду розподілу випадкової величини</string>
    <string name="title_of_table31">Обчислення статистик ряду розподілу діаметра</string>
    <string name="xi_cm">Xi, см</string>
    <string name="ni">ni</string>
    <string name="x_shtrh_i">x\' i</string>
    <string name="x_shtrh_i_mltpl_ni">x\' i * n i</string>
    <string name="x_shtrh_i_2__mltpl_ni">(x\' i)^2 * n i</string>
    <string name="x_shtrh_i_3__mltpl_ni">(x\' i)^3 * n i</string>
    <string name="x_shtrh_i_4__mltpl_ni">(x\' i)^4 * n i</string>
    <string name="x_shtrh_i_plus_1">x\' i +1</string>
    <string name="x_shtrh_i_plus_1_2_mltpl_ni">(x\' i +1)^4 * n i</string>
    <string name="title_of_chapter_35">3.5. Побудова довірчих інтервалів (р=0,95)</string>
    <string name="title_of_chapter_34">3.4. Обчислення статистик розподілу та їхніх основних помилок</string>
    <string name="title_of_chapter_33">3.3. Обчислення основних моментів</string>
    <string name="title_of_chapter_32">3.2. Обчислення умовних центральних моментів</string>
    <string name="title_of_chapter_31">3.1. Обчислення умовних початкових моментів</string>
    <string name="control">Контроль</string>
    <string name="controlText31">Оскільки М\'0 завжди дорівнює одиниці, злівої частини співвідношення контролю випливає:</string>
    <string name="ser_arefm">- середнє арифметичне значення</string>
    <string name="ser_kvadratichne">- середнє квадратичне відхилення</string>
    <string name="koef_minlv">- коефіцієнт мінливості</string>
    <string name="pokaznk_asumetrii">- показник асиметрії</string>
    <string name="pokaznik_ekscesy">- показник ексцесу</string>
    <string name="osn_pomilk_ser_znach">- основна помилка середнього значення</string>
    <string name="osn_pomilk_ser_kvdr_znach">- основна помилка середнього квадратичного відхилення</string>
    <string name="osn_pomilk_koef_minlv">- основна помилка коефіцієнта мінливості</string>
    <string name="osn_pomilk_pokazn_asimetrii">- основна помилка показника асиметрії</string>
    <string name="osn_pomilk_pokazn_ekscesy">- основна помилка показника ексцесу</string>
    <string name="pokazn_tochnosti_doslidy">- показник точності досліду</string>
    <string name="final_for_chapter_34">Одержані статистики та їхні помилки дозволяють будувати довірчі інтервали для відповідних цим статистикам параметрів, виходячи із співвідношення</string>
    <string name="topic_4_subject">Робота 4. Моделювання емпіричних розподілів</string>
    <string name="title_of_table4">4. Обчислення частот кривої нормального розподілу</string>
    <string name="topic_4_text1_view_fragment">функція нормального розподілу (закон Муаврв-Гаусса-Лапласа)</string>
    <string name="topic_4_text2_view_fragment">нормовані границі розрядів;</string>
    <string name="topic_4_text3_view_fragment">функція нормованого нормального розподілу;</string>
    <string name="topic_4_text4_view_fragment">властивість функції нормованого нормального розподілу;</string>
    <string name="topic_4_text5_view_fragment">імовірність потрапляння випадкової величини в i-й розряд (одна із властивостей функції розподілу);</string>
    <string name="topic_4_text6_view_fragment">теоретична частота i-го розряду (наслідок статестичного визначення ймовірності події).</string>
    <string name="topic_4_text7_view_fragment">Таблиця 5</string>
    <string name="topic_4_table_name">Обчислення частот кривої нормального розподілу</string>
    <string name="x1_cm">xi, cм</string>

</resources>
