<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <View
                android:layout_width="10dp"
                android:layout_height="match_parent" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical">


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/topic_4_subject"
                    android:textSize="15dp"
                    android:textStyle="bold"
                    android:transitionName="transformationName1" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="10dp" />

                <TextView
                    android:id="@+id/tv18_topic_2_1_view_fragment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/title_of_table4"
                    android:textStyle="bold" />
                <View
                    android:layout_width="match_parent"
                    android:layout_height="10dp" />

                <TextView
                    android:id="@+id/tv1_topic_4_view_fragment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="@string/topic_4_text1_view_fragment" />
                <TextView
                    android:id="@+id/tv2_topic_4_view_fragment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="@string/topic_4_text2_view_fragment" />
                <TextView
                    android:id="@+id/tv3_topic_4_view_fragment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="@string/topic_4_text3_view_fragment" />
                <TextView
                    android:id="@+id/tv4_topic_4_view_fragment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="@string/topic_4_text4_view_fragment" />
                <TextView
                    android:id="@+id/tv5_topic_4_view_fragment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="@string/topic_4_text5_view_fragment" />
                <TextView
                    android:id="@+id/tv6_topic_4_view_fragment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="@string/topic_4_text6_view_fragment" />


            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>