<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <View
            android:layout_width="10dp"
            android:layout_height="match_parent" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/topic_3_subject"
                android:textSize="15dp"
                android:textStyle="bold" />

            <View
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <TextView
                android:id="@+id/tv18_topic_2_1_view_fragment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/title_of_table31"
                android:textStyle="bold" />


            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TableRow>

                    <TextView
                        android:id="@+id/tv_C1R1_Table3_view_fragment"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/xi_cm" />




                    <TextView
                        android:id="@+id/tv_C2R1_Table3_view_fragment"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/ni" />

                    <TextView
                        android:id="@+id/tv_C3R1_Table3_view_fragment"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/x_shtrh_i" />

                    <TextView
                        android:id="@+id/tv_C4R1_Table3_view_fragment"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/x_shtrh_i_mltpl_ni" />

                    <TextView
                        android:id="@+id/tv_C5R1_Table3_view_fragment"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/x_shtrh_i_2__mltpl_ni" />

                    <TextView
                        android:id="@+id/tv_C6R1_Table3_view_fragment"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/x_shtrh_i_3__mltpl_ni" />

                    <TextView
                        android:id="@+id/tv_C7R1_Table3_view_fragment"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/x_shtrh_i_4__mltpl_ni" />

                    <TextView
                        android:id="@+id/tv_C8R1_Table3_view_fragment"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/x_shtrh_i_plus_1" />

                    <TextView
                        android:id="@+id/tv_C9R1_Table3_view_fragment"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/x_shtrh_i_plus_1_2_mltpl_ni" />
                </TableRow>



            </TableLayout>

            <TableLayout
                android:id="@+id/tl_topic3_view_fragment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">



            </TableLayout>



            <TextView
                android:id="@+id/tv_chapter_31_title_view_fragment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="left"
                android:text="@string/title_of_chapter_31"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/x2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:gravity="left"
                android:text="x2"
                android:textStyle="italic" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:gravity="left"
                android:text="@string/control"
                android:textStyle="italic" />


            <View
                android:layout_width="match_parent"
                android:layout_height="15dp" />

            <TextView
                android:id="@+id/tv_chapter_32_title_view_fragment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="left"
                android:text="@string/title_of_chapter_32"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:gravity="left"
                android:text="@string/control"
                android:textStyle="italic" />


            <View
                android:layout_width="match_parent"
                android:layout_height="15dp" />

            <TextView
                android:id="@+id/tv_chapter_33_title_view_fragment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="left"
                android:text="@string/title_of_chapter_33"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:gravity="left"
                android:text="@string/control"
                android:textStyle="italic" />


            <View
                android:layout_width="match_parent"
                android:layout_height="15dp" />

            <TextView
                android:id="@+id/tv_chapter_34_title_view_fragment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="left"
                android:text="@string/title_of_chapter_34"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:gravity="left"
                android:text="@string/control"
                android:textStyle="italic" />


            <View
                android:layout_width="match_parent"
                android:layout_height="15dp" />

            <TextView
                android:id="@+id/tv_chapter_35_title_view_fragment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="left"
                android:text="@string/title_of_chapter_35"
                android:textStyle="bold" />





        </LinearLayout>

        <View
            android:layout_width="10dp"
            android:layout_height="match_parent" />
        <View
            android:layout_width="10dp"
            android:layout_height="match_parent" />
        <View
            android:layout_width="10dp"
            android:layout_height="match_parent" />


    </LinearLayout>
</LinearLayout>